--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,5 +2,6 @@
 required.boardForm.title="\uC81C\uBAA9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694"
 required.boardForm.content="\uB0B4\uC6A9\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694"
 required.boardForm.keyword="\uD574\uC2DC\uD0DC\uADF8\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694"
+required.boardForm.studyName="\uC2A4\uD130\uB514 \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694"
 
-required.replyForm.content="\uB313\uAE00\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694"
+required.commentForm.content="\uB313\uAE00\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694"
